--- a/SchoolSystem.Data/SchoolSystem.Data.csproj
+++ b/SchoolSystem.Data/SchoolSystem.Data.csproj
@@ -70,6 +70,10 @@
     <Compile Include="Migrations\202005152323148_help2.designer.cs">
       <DependentUpon>202005152323148_help2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202005171845103_AddedFluent.cs" />
+    <Compile Include="Migrations\202005171845103_AddedFluent.designer.cs">
+      <DependentUpon>202005171845103_AddedFluent.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\Entities\Course.cs" />
     <Compile Include="Models\Entity.cs" />
     <Compile Include="Migrations\Configuration.cs" />
@@ -94,6 +98,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202005152323148_help2.resx">
       <DependentUpon>202005152323148_help2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202005171845103_AddedFluent.resx">
+      <DependentUpon>202005171845103_AddedFluent.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
